# LinearAlgebra

./: .gitignore  CMakeLists.txt  test.cpp
Exceptions/: InvalidDimensionsException.cpp  InvalidDimensionsException.h
Headers/: LinearAlgebra.h
Headers/Exceptions/: InvalidDimensionsException.h  SingularMatrixException.h
Sources/: LinearAlgebra.cpp
Sources/Exceptions/: InvalidDimensionsException.cpp  SingularMatrixException.cpp
Tests/: AddTest.cpp  BuildTest.cpp  CMakeLists.txt  ColumnTest.cpp  DeterminantTest.cpp  IdentityTest.cpp  InverseTest.cpp  MultiplyTest.cpp  RowTest.cpp  ScalarTest.cpp  SubtractTest.cpp  TransposeTest.cpp
